--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,28 +26,26 @@ body .header .menu .menu-right-section {
     list-style: none;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 250px;
-    height: auto;
+    height: 30px;
 }
 
 body .header .menu .menu-right-section li a {
     color: black;
     margin-right: 10px;
+    height: 24px;
 }
 
-body .header .menu .menu-right-section .menu-apps{
-
-    background-image: url("https://i.imgur.com/37rqegm.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    height: 25px;
-    width: 25px;
+body .header .menu .menu-right-section .menu-apps img{
+    height: 24px;
+    width: 24px;
 }
 
 body .header .menu .menu-right-section .menu-profile-image img{
     border-radius: 50%;
-    margin-left: 10px;
+    margin-right: -50px;
+
 }
 
 /*Estilos Logo*/
@@ -57,8 +55,8 @@ main{
 }
 
 main .logo-center{
-    margin: 0 auto 0 auto;
-    margin-top: 110px;
+    margin: 0 auto;
+    margin-top: 80px;
     width: 520px;
 }
 
@@ -67,3 +65,17 @@ main .logo-center img{
     height: 90px;
     object-fit: contain;
 }
+
+/*Estilos Input Principal*/
+
+main .input-area{
+    /* Espaciado */
+    margin: 0 auto;
+    width: 582px;
+    height: 44px;
+    /*Bordeado*/
+    border: 1px solid #e3e5e9;
+    border-radius: 50px;
+}
+
+main .input-area 
