--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,7 @@ main{
 
 main .logo-center{
     margin: 0 auto;
-    margin-top: 80px;
+    margin-top: 120px;
     width: 520px;
 }
 
@@ -71,11 +71,22 @@ main .logo-center img{
 main .input-area{
     /* Espaciado */
     margin: 0 auto;
-    width: 582px;
+    width: 580px;
     height: 44px;
     /*Bordeado*/
     border: 1px solid #e3e5e9;
-    border-radius: 50px;
+    border-radius: 24px;
 }
 
-main .input-area 
+main .input-area:hover{
+    border-color: #dfe1e5;
+    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+}
+
+main .input-area input{
+    padding: 0px;
+    border: none;
+    width: 500px;
+    height: 44px;
+    outline: none;
+}
