--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,17 +50,18 @@ body .header .menu .menu-right-section .menu-profile-image img{
 
 /*Estilos Logo*/
 
-main{
+body main{
     text-align: center;
 }
 
-main .logo-center{
+body main .logo-center{
     margin: 0 auto;
-    margin-top: 120px;
+    margin-top: 140px;
     width: 520px;
+    margin-bottom: 20px;
 }
 
-main .logo-center img{
+body main .logo-center img{
     width: 272px;
     height: 90px;
     object-fit: contain;
@@ -68,7 +69,17 @@ main .logo-center img{
 
 /*Estilos Input Principal*/
 
-main .input-area{
+body main .input-area .search-icon{
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Vector_search_icon.svg/945px-Vector_search_icon.svg.png');
+    width: 14px;
+    height: 14px ;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: -30px;
+}
+
+body main .input-area{
     /* Espaciado */
     margin: 0 auto;
     width: 580px;
@@ -76,17 +87,25 @@ main .input-area{
     /*Bordeado*/
     border: 1px solid #e3e5e9;
     border-radius: 24px;
+    /*Display*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-main .input-area:hover{
+body main .input-area:hover{
     border-color: #dfe1e5;
     box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
 }
 
-main .input-area input{
+body main .input-area input{
     padding: 0px;
     border: none;
     width: 500px;
     height: 44px;
     outline: none;
 }
+
+
+
+/* micro https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png*/
