--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,11 +119,11 @@ body main .input-area .micro-icon{
 
 /*Estilos de botones */
 
-main .buttons-area div{
+body main .buttons-area div{
     display: inline-block;
 }
 
-main .buttons-area div button{
+body main .buttons-area div button{
     width: 160px;
     height: 36px;
 
@@ -136,8 +136,46 @@ main .buttons-area div button{
     margin-right: 8px;
 }
 
-main .buttons-area div button:hover{
+body main .buttons-area div button:hover{
     cursor:pointer;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     border-color: #c6c6c6;
+}
+
+/*Estilos del footer*/
+
+body footer{
+    /*Posicionamiento*/
+    position: absolute;
+    bottom: 0;
+    /*Medidas*/
+    width: 100%; 
+    height: 50px;
+    /*Display*/
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    /*BG y borde*/
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+
+body footer ul{
+    list-style: none;
+    display: flex;
+    margin: 10px;
+    padding-left: 0px;
+}
+
+body footer .footer-left{
+    justify-self: left;
+}
+
+body footer .footer-right{
+    justify-self: right;
+}
+
+body footer ul li a{
+    margin: 10px;
+    color: #5f6368;
 }
