--- a/css/estilos.css
+++ b/css/estilos.css
@@ -179,3 +179,7 @@ body footer ul li a{
     margin: 10px;
     color: #5f6368;
 }
+
+body footer ul li a:hover{
+    text-decoration: underline;
+}
